<resources>
    <string name="app_name">Trip Calculator</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros da viagem</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço da gasolina por litro</string>
    <string name="autonomy">Autonomia do veículo</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>